fixes on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,8 @@
   html {
     height: 100%;
     /* overflow: hidden; */
+    overscroll-behavior: none;
+    -webkit-overflow-scrolling: touch;
   }
 
   body {
@@ -19,6 +21,8 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    overscroll-behavior: none;
+    -webkit-overflow-scrolling: touch;
   }
 
   #__next {
